src/state/snapshots/protols__state__rename__test__apply_rename_ops_from_reference_site.snap
---
source: src/state/rename.rs
expression: edits
---
"file://input/service.proto":
  - range:
      start:
        line: 7
        character: 16
      end:
        line: 7
        character: 30
    newText: FetchBookRequest
"file://input/messages.proto":
  - range:
      start:
        line: 4
        character: 8
      end:
        line: 4
        character: 22
    newText: FetchBookRequest
