src/state/snapshots/protols__state__rename__test__references_for_fqn-2.snap
---
source: src/state/rename.rs
expression: "state.references_for_fqn(\"com.workspace.Author.Address\")"
---
- uri: "file://input/a.proto"
  range:
    start:
      line: 12
      character: 3
    end:
      line: 12
      character: 17
- uri: "file://input/b.proto"
  range:
    start:
      line: 9
      character: 11
    end:
      line: 9
      character: 18
- uri: "file://input/b.proto"
  range:
    start:
      line: 13
      character: 3
    end:
      line: 13
      character: 10
