src/state/snapshots/protols__state__rename__test__references_for_fqn-3.snap
---
source: src/state/rename.rs
expression: "state.references_for_fqn(\"com.utility.Foobar.Baz\")"
---
- uri: "file://input/a.proto"
  range:
    start:
      line: 13
      character: 3
    end:
      line: 13
      character: 25
- uri: "file://input/c.proto"
  range:
    start:
      line: 8
      character: 11
    end:
      line: 8
      character: 14
- uri: "file://input/c.proto"
  range:
    start:
      line: 12
      character: 3
    end:
      line: 12
      character: 6
