src/state/snapshots/protols__state__rename__test__rename_field_and_enum_value_single_site-2.snap
---
source: src/state/rename.rs
expression: "state.rename_for_fqn(\"com.single.Color.RED\", \"CRIMSON\")"
---
"file://input/single.proto":
  - range:
      start:
        line: 2
        character: 13
      end:
        line: 2
        character: 16
    newText: CRIMSON
