src/state/snapshots/protols__state__rename__test__rename_for_fqn-2.snap
---
source: src/state/rename.rs
expression: "state.rename_for_fqn(\"com.workspace.Author.Address\", \"Location\")"
---
"file://input/a.proto":
  - range:
      start:
        line: 12
        character: 3
      end:
        line: 12
        character: 17
    newText: Author.Location
"file://input/b.proto":
  - range:
      start:
        line: 9
        character: 11
      end:
        line: 9
        character: 18
    newText: Location
  - range:
      start:
        line: 13
        character: 3
      end:
        line: 13
        character: 10
    newText: Location
