src/state/snapshots/protols__state__rename__test__rename_for_fqn.snap
---
source: src/state/rename.rs
expression: "state.rename_for_fqn(\"com.workspace.Author\", \"Writer\")"
---
"file://input/a.proto":
  - range:
      start:
        line: 11
        character: 3
      end:
        line: 11
        character: 9
    newText: Writer
  - range:
      start:
        line: 12
        character: 3
      end:
        line: 12
        character: 17
    newText: Writer.Address
"file://input/b.proto":
  - range:
      start:
        line: 5
        character: 8
      end:
        line: 5
        character: 14
    newText: Writer
  - range:
      start:
        line: 13
        character: 3
      end:
        line: 13
        character: 10
    newText: Address
